logs/nano/1391818/stair_cer.err
  File "/home/hpc/iwi5/iwi5298h/Uddipan-Thesis/nanonets/finetune/stair_cer.py", line 989
    print(f"\n{'='*60)")
                       ^
SyntaxError: f-string: unmatched ')'
